; ModuleID = '/home/carl/AnghaBench/linux/drivers/spi/extr_spi-stm32-qspi.c_stm32_qspi_dma_free.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/spi/extr_spi-stm32-qspi.c_stm32_qspi_dma_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stm32_qspi = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.stm32_qspi*)* @stm32_qspi_dma_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @stm32_qspi_dma_free(%struct.stm32_qspi* %0) #0 {
  %2 = alloca %struct.stm32_qspi*, align 8
  store %struct.stm32_qspi* %0, %struct.stm32_qspi** %2, align 8
  %3 = load %struct.stm32_qspi*, %struct.stm32_qspi** %2, align 8
  %4 = getelementptr inbounds %struct.stm32_qspi, %struct.stm32_qspi* %3, i32 0, i32 1
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load %struct.stm32_qspi*, %struct.stm32_qspi** %2, align 8
  %9 = getelementptr inbounds %struct.stm32_qspi, %struct.stm32_qspi* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = call i32 @dma_release_channel(i64 %10)
  br label %12

12:                                               ; preds = %7, %1
  %13 = load %struct.stm32_qspi*, %struct.stm32_qspi** %2, align 8
  %14 = getelementptr inbounds %struct.stm32_qspi, %struct.stm32_qspi* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %22

17:                                               ; preds = %12
  %18 = load %struct.stm32_qspi*, %struct.stm32_qspi** %2, align 8
  %19 = getelementptr inbounds %struct.stm32_qspi, %struct.stm32_qspi* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = call i32 @dma_release_channel(i64 %20)
  br label %22

22:                                               ; preds = %17, %12
  ret void
}

declare dso_local i32 @dma_release_channel(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
